--- a/components/python/pyopenssl/Makefile
+++ b/components/python/pyopenssl/Makefile
@@ -24,6 +24,7 @@ include ../../../make-rules/shared-macros.mk
 
 PATH=/usr/bin:/usr/sbin
 
+PYTHON_VERSIONS=	2.6
 COMPONENT_NAME=		pyOpenSSL
 COMPONENT_VERSION=	0.13
 COMPONENT_REVISION=	1
@@ -31,9 +32,11 @@ COMPONENT_SRC=		$(COMPONENT_NAME)-$(COMPONENT_VERSION)
 COMPONENT_ARCHIVE=	$(COMPONENT_SRC).tar.gz
 COMPONENT_ARCHIVE_HASH=	\
     sha256:21e12b03abaa0e04ecc8cd9c251598f71bae11c9f385304234e4ea5618c6163b
+#    sha256:a99db8e59c120138ad8a72eecedcc24b4510d2eed3ce48213b7e32f22cc4ee6e
 COMPONENT_ARCHIVE_URL=  $(call pypi_url)
 COMPONENT_PROJECT_URL=  https://launchpad.net/pyopenssl
 COMPONENT_BUGDB=	python-mod/pyopenssl
+CFLAGS +=		-fPIC
 
 include $(WS_TOP)/make-rules/prep.mk
 include $(WS_TOP)/make-rules/setup.py.mk
