--- a/components/ntp/Makefile
+++ b/components/ntp/Makefile
@@ -26,17 +26,17 @@
 include ../../make-rules/shared-macros.mk
 
 COMPONENT_NAME=		ntp
-COMPONENT_PATCH_VERSION=	453
-COMPONENT_VERSION=	4.2.7
+COMPONENT_PATCH_VERSION=	3
+COMPONENT_VERSION=	4.2.8
 HUMAN_VERSION=		$(COMPONENT_VERSION)p$(COMPONENT_PATCH_VERSION)
 IPS_COMPONENT_VERSION=	$(COMPONENT_VERSION).$(COMPONENT_PATCH_VERSION)
 COMPONENT_PROJECT_URL=	http://www.ntp.org/
-COMPONENT_SRC_NAME=	ntp-dev
+COMPONENT_SRC_NAME=	ntp
 COMPONENT_SRC=		$(COMPONENT_SRC_NAME)-$(HUMAN_VERSION)
 COMPONENT_ARCHIVE=	$(COMPONENT_SRC).tar.gz
 COMPONENT_ARCHIVE_HASH=	 \
-	sha256:7cc45b28e7b598bd689df9f55a352a2fcc8b92dd09c4706f7cc74c230ac7f683
-COMPONENT_ARCHIVE_URL=	http://archive.ntp.org/ntp4/ntp-dev/$(COMPONENT_ARCHIVE)
+	sha256:818ca4f2ed6ca845b1c5ec43f5e6ad905eaa0fc0aab2d509ed6b962a37fbf38f
+COMPONENT_ARCHIVE_URL=	http://archive.ntp.org/ntp4/ntp-4.2/$(COMPONENT_ARCHIVE)
 COMPONENT_BUGDB= service/ntp
 
 PATCH_LEVEL = 0
